Drop requirement for Java 6 for building. Now builds should be done with Java 8.